classDiagram
direction LR

class Game {
  -RenderWindow m_window
  -Renderer m_renderer
  -Snake m_snake
  -Food m_food
  -RandomEngine m_rng
  -Font m_font
  -Text m_hudText
  -Text m_startText
  -Text m_pausedText
  -Text m_gameOverText
  -RectangleShape m_overlay
  -GameState m_state
  -int m_score
  -int m_applesEaten
  -Clock m_clock
  -Time m_accumulator
  -int m_baseTickMs
  -int m_minTickMs
  -int m_msStep
  +Game(RenderWindow)
  +run()
  -processEvents()
  -update(Time)
  -render()
  -resetToStart()
  -startNewRun()
  -restart()
  -setState(GameState)
  -isOutside(Cell) bool
  -randomFreeCell() Cell
  -eatApple()
}

class Renderer {
  -RenderWindow m_window
  -int CELL_SIZE
  -int GRID_WIDTH
  -int GRID_HEIGHT
  +Renderer(RenderWindow)
  +renderGrid()
  +renderSnake(Snake)
  +renderFood(Food)
  +cellSize() int
  +gridWidth() int
  +gridHeight() int
}

class Snake {
  -vector~Cell~ m_body
  -Direction m_dir
  -int m_grow
  +Snake()
  +reset()
  +body() vector~Cell~
  +head() Cell
  +setDirection(Direction)
  +direction() Direction
  +nextHead() Cell
  +move()
  +grow(int)
  +contains(Cell) bool
  +isSelfColliding() bool
}

class Food {
  -Cell m_pos
  +Food()
  +position() Cell
  +setPosition(Cell)
}

class Cell {
  +int x
  +int y
}

class Direction {
  <<enumeration>>
  Up
  Down
  Left
  Right
}

class GameState {
  <<enumeration>>
  Start
  Playing
  Paused
  GameOver
}

Game --> Renderer : uses
Game --> Snake : owns
Game --> Food : owns
Renderer ..> Snake : renders
Renderer ..> Food : renders
Snake --> Cell : body
Food --> Cell : position
Snake ..> Direction
Game ..> GameState
